wrapping up chapter 10

--- a/Chapter1_Proteins.qmd
+++ b/Chapter1_Proteins.qmd
@@ -3,7 +3,7 @@ title: "Proteins: from sequence to structure"
 format: html
 ---
 
-Proteins are the fundamental building blocks of biological systems, and understanding their structure is crucial for deciphering their function. The journey from a one-dimensional (1D) amino acid sequence to a two-dimensional (2D) contact map/distance map and finally to a three-dimensional (3D) structure has been one of the grand challenges in computational biology. In this chapter, we explore how protein models based on attention/transformer-like modules, like AlphaFold and AlphaFold 2, revolutionized this space.
+Proteins are the fundamental building blocks of biological systems, and understanding their structure is crucial for deciphering their function. The journey from a one-dimensional (1D) amino acid sequence to a two-dimensional (2D) contact map/distance map and finally to a three-dimensional (3D) structure has been one of the grand challenges in computational biology. In this chapter, we explore how protein models based on attention/transformer-like modules, like AlphaFold and ESMfold, revolutionized this space.
 
 ## Traditional Approaches to Protein Structure Prediction
 
@@ -72,9 +72,9 @@ ggplot(msa_data, aes(x = Position, y = Species, fill = AminoAcid)) +
 
 The success of AlphaFold 2 marked a watershed moment for protein structure prediction. By integrating attention-based neural networks and using MSAs to predict 3D structures directly from sequence information, AF2 achieved unprecedented accuracy. Yet, the reliance on MSAs introduced limitations — the need for evolutionary data and the computational cost of alignment.
 
-Protein language models (PLMs) emerged as an alternative. By pretraining on vast protein databases, PLMs capture contextual information about amino acids and their interactions without needing MSAs.Models like ESM (Evolutionary Scale Modeling)[@rives2021] and ProtTrans demonstrated the potential of PLMs to predict secondary and tertiary structures directly from sequence data. By encoding the relationships between residues through attention mechanisms, these models implicitly learn structural and functional properties, generating accurate 2D contact maps and even 3D coordinates in some cases.
+Protein language models (PLMs) emerged as an alternative. By pretraining on vast protein databases, PLMs capture contextual information about amino acids and their interactions without needing MSAs. Models like ESM (Evolutionary Scale Modeling)[@rives2021], ESM2[@lin2023] and ProtTrans[@elnaggar2022] demonstrated the potential of PLMs to predict secondary and tertiary structures directly from sequence data. By encoding the relationships between residues through attention mechanisms, these models implicitly learn structural and functional properties, generating accurate 2D contact maps and even 3D coordinates in some cases.
 
-Protein language models are usually augmented with geometric neural networks or other additional model elements when used for protein structure prediction. These augmentations ensure the 1D sequences, 2D contact maps, and 3D protein shapes that follow adhere to basic geometric rules. A language model or another sequence model isn't inherently aware of 3D space. So while we'll experiment with the latent 2D representations (distances between amino acids) that are implicitly hiding in language models, those representations are noisy and might imply 3D structures that cannot exist (e.g., the distance between a and b, and b and c, might not be consistent with the distance between b and c, etc.). Adding specific neural networks that are designed to produce results that can exist in Euclidean (3D) space greatly improves protein structure prediction.
+Protein language models are frequently augmented with geometric neural networks or other additional model "adapters" when used for protein structure prediction. These augmentations ensure the 1D sequences, 2D contact maps, and 3D protein shapes that follow adhere to basic geometric rules. A language model or another sequence model isn't inherently aware of 3D space. So while we'll experiment with the latent 2D representations (distances between amino acids) that are implicitly hiding in language models, those representations are noisy and might imply 3D structures that cannot exist (e.g., the distance between a and b, and b and c, might not be consistent with the distance between b and c, etc.). Adding specific neural networks that are designed to produce results that can exist in Euclidean (3D) space greatly improves protein structure prediction. More recent experimentation has linked protein language models directly to diffusion image models to predict protein structure in 3D space with minimal supervision.
 
 ## Step by Step: 1D Sequences to 3D Structures
 
@@ -84,6 +84,6 @@ The process of moving from a linear amino acid sequence to a folded protein stru
 
 2.  **1D Sequence Representation:** The raw sequence of amino acids, analogous to a string of text in natural language. In **Chapter 9**, we'll train a protein language model. Since we can't compete with the likes of Google DeepMind and Facebook, or even startups, and I want it to be feasible for you to run all of the steps at home, we'll train a small language model on an ad-hoc selection of G-protein coupled receptor (GPCR) (like/related) proteins across hundreds of species. This large protein family (4% of human protein-coding genome, for example) shares evolutionary origins and therefore is probably a ripe target for a small model with limited training budget.
 
-3.  **2D Contact Map Prediction:** For any protein, you can conceive a matrix representation showing which pairs of residues are likely to be spatially close, providing key insights into the folding topology. In **Chapter 10**, we'll discuss ways in which protein language models (latently!) actually already learn the 2D contact map for each protein, and we'll extract these from the protein model we trained and compare them to the true contact map for a few proteins. because we'll dig into the internals of a language model we'll also have to grapple with self-attention, the core "correlational" mechanism in a language model in this chapter.
+3.  **2D Contact Map Prediction:** For any protein, you can conceive a matrix representation showing which pairs of residues are likely to be spatially close, providing key insights into the folding topology. In **Chapter 10**, we'll discuss ways in which protein language models (latently!) actually already learn the 2D contact map for each protein, and we'll extract these from the protein model we trained and compare them to the true contact map for a few proteins. because we'll dig into the internals of a language model we'll also have to study **self-attention**, the core "correlational" mechanism in a language model in this chapter.
 
-4.  **3D Structure Construction:** Using the contact map and learned residue interactions to predict the final three-dimensional arrangement of atoms. In **Chapter 11**, we'll look at a few different ways in which we can train models that output a full 3D protein by post-processing the 2D information learned in protein language models.
+4.  **3D Structure Construction:** In **Chapter 11**, we'll look at a few different ways in which we can train models that output a full 3D protein by post-processing the 2D information learned in protein language models. We'll conceive of 2D structures as images, and 3D structures as simply 3D representations. Deep-learning models for image data have advanced incredibly, and those lessons have been applied to proteins structure modeling. One highly successful guided image modeling technique is **guided-diffusion,** a model where trough adding noise to images in 1000s of small steps, and then training a model to denoise the image one step at a time people have been able to train "generative" models. These models can be augmented with textual (or other) context, so while denoising a golden retriever with a funny hat, the model is provided the embedding, or reduction of the text "Golden retriever with a funny hat". **Alphafold3**[@abramson2024], one of the most performant models to date, is essentially a protein language model (slightly augmented with MSA information) where the final information form the language model is used to guide a diffusion model. Because **Alphafold3** is a fairly complex model, we'll tak a stab at training something slightly more abstracted. We;'ll use our own protein model (or `facebook/esm2_t33_650M_UR50D`) to produce embedding, and by using cross attention between the language model embedding, and the diffusion image model matrices "guide" the construction of 2D contact maps from noise using fairly standard image modeling techniques[@saharia2022]. Finally, we'll have code to do the same for 3D protein structure, though training that model will likely exceed the computational facilities I or either of you can easily access.
