--- a/references.bib
+++ b/references.bib
@@ -379,3 +379,56 @@
 	url = {http://dx.doi.org/10.1073/pnas.2406285121},
 	langid = {en}
 }
+
+@article{lin2023a,
+	title = {Evolutionary-scale prediction of atomic-level protein structure with a language model},
+	author = {Lin, Zeming and Akin, Halil and Rao, Roshan and Hie, Brian and Zhu, Zhongkai and Lu, Wenting and Smetanin, Nikita and Verkuil, Robert and Kabeli, Ori and Shmueli, Yaniv and dos Santos Costa, Allan and Fazel-Zarandi, Maryam and Sercu, Tom and Candido, Salvatore and Rives, Alexander},
+	year = {2023},
+	month = {03},
+	date = {2023-03-17},
+	journal = {Science},
+	pages = {1123--1130},
+	volume = {379},
+	number = {6637},
+	doi = {10.1126/science.ade2574},
+	url = {http://dx.doi.org/10.1126/science.ade2574},
+	langid = {en}
+}
+
+@article{abramson2024,
+	title = {Accurate structure prediction of biomolecular interactions with AlphaFold 3},
+	author = {Abramson, Josh and Adler, Jonas and Dunger, Jack and Evans, Richard and Green, Tim and Pritzel, Alexander and Ronneberger, Olaf and Willmore, Lindsay and Ballard, Andrew J. and Bambrick, Joshua and Bodenstein, Sebastian W. and Evans, David A. and Hung, Chia-Chun and {O{\textquoteright}Neill}, Michael and Reiman, David and Tunyasuvunakool, Kathryn and Wu, Zachary and {{\v{Z}}emgulyt{\.{e}}}, {Akvil{\.{e}}} and Arvaniti, Eirini and Beattie, Charles and Bertolli, Ottavia and Bridgland, Alex and Cherepanov, Alexey and Congreve, Miles and Cowen-Rivers, Alexander I. and Cowie, Andrew and Figurnov, Michael and Fuchs, Fabian B. and Gladman, Hannah and Jain, Rishub and Khan, Yousuf A. and Low, Caroline M. R. and Perlin, Kuba and Potapenko, Anna and Savy, Pascal and Singh, Sukhdeep and Stecula, Adrian and Thillaisundaram, Ashok and Tong, Catherine and Yakneen, Sergei and Zhong, Ellen D. and Zielinski, Michal and {{\v{Z}}ídek}, Augustin and Bapst, Victor and Kohli, Pushmeet and Jaderberg, Max and Hassabis, Demis and Jumper, John M.},
+	year = {2024},
+	month = {05},
+	date = {2024-05-08},
+	journal = {Nature},
+	pages = {493--500},
+	volume = {630},
+	number = {8016},
+	doi = {10.1038/s41586-024-07487-w},
+	url = {http://dx.doi.org/10.1038/s41586-024-07487-w},
+	langid = {en}
+}
+
+@article{saharia2022,
+	title = {Photorealistic Text-to-Image Diffusion Models with Deep Language Understanding},
+	author = {Saharia, Chitwan and Chan, William and Saxena, Saurabh and Li, Lala and Whang, Jay and Denton, Emily and Ghasemipour, Seyed Kamyar Seyed and Ayan, Burcu Karagol and Mahdavi, S. Sara and Lopes, Rapha Gontijo and Salimans, Tim and Ho, Jonathan and Fleet, David J and Norouzi, Mohammad},
+	year = {2022},
+	date = {2022},
+	doi = {10.48550/ARXIV.2205.11487},
+	url = {https://arxiv.org/abs/2205.11487}
+}
+
+@article{elnaggar2022,
+	title = {ProtTrans: Toward Understanding the Language of Life Through Self-Supervised Learning},
+	author = {Elnaggar, Ahmed and Heinzinger, Michael and Dallago, Christian and Rehawi, Ghalia and Wang, Yu and Jones, Llion and Gibbs, Tom and Feher, Tamas and Angerer, Christoph and Steinegger, Martin and Bhowmik, Debsindhu and Rost, Burkhard},
+	year = {2022},
+	month = {10},
+	date = {2022-10-01},
+	journal = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	pages = {7112--7127},
+	volume = {44},
+	number = {10},
+	doi = {10.1109/tpami.2021.3095381},
+	url = {http://dx.doi.org/10.1109/TPAMI.2021.3095381}
+}
