--- a/Preamble2.qmd
+++ b/Preamble2.qmd
@@ -16,12 +16,14 @@ The book is divided into sections that deal with a specific biological modality 
 
 ### DNA Language Models
 
-**Chapter 1 covers** downloading and processing (DNA) sequence data from Ensembl and uploading it to Hugging Face. **Chapter 2 covers** training a first small DNA sequence language model; the model is a bog-standard language model meant for natural languages, simply applied to DNA. In **Chapter 3**, we explore how you'd evaluate whether a DNA model is any good—is our model learning anything at all? Then in **Chapter 4**, we explore evolutionary-aware encoders and how they relate to DNA language models. In **Chapter 5** we compare the two model we trained on a number of tasks, getting a feel for comparatie evaluation. If you stuck with it and get to **Chapter 6** you are ready for a brief review of existing DNA language models.
+**Chapter 1 covers** downloading and processing (DNA) sequence data from Ensembl and uploading it to Hugging Face. **Chapter 2 covers** training a first small DNA sequence language model; the model is a bog-standard language model meant for natural languages, simply applied to DNA. In **Chapter 3**, we explore how you'd evaluate whether a DNA model is any good—is our model learning anything at all? Then in **Chapter 4**, we explore evolutionary-aware encoders and how they relate to DNA language models. In **Chapter 5** we compare the two model we trained on a number of tasks, getting a feel for comparative evaluation. If you stuck with it and get to **Chapter 6** you are ready for a brief review of existing DNA language models.
 
 ## Scaling Training
 
 After the book section on DNA models, we step back and consider scaling up model training. To train a full "production" model you'd need to scale from running things interactively on a MacBook, to a GPU in the cloud to 8 GPUs in a server. Conditional on me getting some funds and/or arranging HPC compute access I might even write about/run training on a whole rack of servers, each with 1-8 GPUs. When scaling we are confronted with a whole host of new issues around training stability and parallel compute.
 
 ### Protein Language Models
+
+In @sec-ProtIntro we discuss the advent of protein language model (initially deep learning models not language models, though they share the key attention mechanisms) and their incredible success at solving a core problem in biology: Predicting the shape of a folded protein from the protein sequence. Their success won the Google DeepMind team a Nobel Prize, rightfully so. In @sec-ProtData we discuss one of the key ingredients of Google's success: the ubiquitous (taxpayer-funded) access to protein (structure) data. Not only are sequences accessible, but there are also bi-annual drops of protein sequence and structure experiments that haven't been shared yet, creating a perfect holdout set which ensures healthy competition, no risk of overfitting, and a lush testing bed for protein models. Then in @sec-PLM we train a small protein language model, mostly to just get acquainted with the code. Later in the chapter "putting it all together" we'll actually train a reasonably sized protein language model on a balanced data mixture.
 
 ### Multi-modal Models (DNA Meets Proteins)
