--- a/references.bib
+++ b/references.bib
@@ -432,3 +432,43 @@
 	doi = {10.1109/tpami.2021.3095381},
 	url = {http://dx.doi.org/10.1109/TPAMI.2021.3095381}
 }
+
+@article{kingma2014,
+	title = {Adam: A Method for Stochastic Optimization},
+	author = {Kingma, Diederik P. and Ba, Jimmy},
+	year = {2014},
+	date = {2014},
+	doi = {10.48550/ARXIV.1412.6980},
+	url = {https://arxiv.org/abs/1412.6980}
+}
+
+@article{Hayes2025,
+	title = {Simulating 500 million years of evolution with a language model},
+	author = {Hayes, Thomas and Rao, Roshan and Akin, Halil and Sofroniew, Nicholas J. and Oktay, Deniz and Lin, Zeming and Verkuil, Robert and Tran, Vincent Q. and Deaton, Jonathan and Wiggert, Marius and Badkundri, Rohil and Shafkat, Irhum and Gong, Jun and Derry, Alexander and Molina, Raul S. and Thomas, Neil and Khan, Yousuf A. and Mishra, Chetan and Kim, Carolyn and Bartie, Liam J. and Nemeth, Matthew and Hsu, Patrick D. and Sercu, Tom and Candido, Salvatore and Rives, Alexander},
+	year = {2025},
+	month = {02},
+	date = {2025-02-21},
+	journal = {Science},
+	pages = {850--858},
+	volume = {387},
+	number = {6736},
+	doi = {10.1126/science.ads0018},
+	url = {http://dx.doi.org/10.1126/science.ads0018},
+	langid = {en}
+}
+@misc{esm2024cambrian,
+  author = {{ESM Team}},
+  title = {ESM Cambrian: Revealing the mysteries of proteins with unsupervised learning},
+  year = {2024},
+  publisher = {EvolutionaryScale Website},
+  url = {https://evolutionaryscale.ai/blog/esm-cambrian},
+  urldate = {2024-12-04}
+}
+@misc{cheng2024,
+	title = {Training Compute-Optimal Protein Language Models},
+	author = {Cheng, Xingyi and Chen, Bo and Li, Pan and Gong, Jing and Tang, Jie and Song, Le},
+	year = {2024},
+	month = {06},
+	date = {2024-06-09},
+	url = {http://dx.doi.org/10.1101/2024.06.06.597716}
+}
