--- a/Chapter3_Proteins.qmd
+++ b/Chapter3_Proteins.qmd
@@ -204,6 +204,18 @@ The model is able to learn the structure of GPCR proteins, thought eh strong var
 
 ![**Figure 1:** GPCR-BERT training loss curve](images/W&B%20Chart%2018_03_2025,%2016_52_49.png)
 
+Its interesting to note that the GCPR-Bert training loss is lower then that of much larger protein models trained on larger datasets. This makes sense, the loss (especially on training data!) is highly dependent on the diversity of the data, learning ALL proteins, is harder then learning a subset of proteins. Even at larger scales this phenomena is still evident. In **Figure 2** (source [@cheng2024] Figure A11) we see two love curves for 85m parameter protein language models. Trained on UniRef90 (representative but not extremely diverse) and ColabFoldDB which contains a lot of meta-genomic protein sequences with far greater diversity. Its harder for the model to learn more diverse data, have the higher loss. However, on downstream tasks like atomic contact prediction and fold classification, the models perform nearly identical!
+
+![**Figure 2** (Figure A11 from [@cheng2024]) the loss curves, and downstream task performances of two models trained on different datasets. Clearly we can't directly compare the loss as the very different losses translate to similar performance!](images/paste-31.png)
+
+## Homework
+
+::: callout-tip
+Cheng et. all reveal something profound about model loss and scientits's goals. The loss isn't a direct measure of the modle's quality for your specific goals. If you are to design a protein language model for a specific tasks (predict the fold of human proteins after mutation for example) then you have to design validation accordingly. We read in this chapter, and last, that because we are running out of animal and plant reference protein data people include meta-genomic protein data is training. Thets probably a great idea, but its worth considering weather for YOUR downstream tasks it is. ESM3 is better then ESM2, is its trained on way more data, but is it better for *your* applications?
+
+An interesting unsolved issue to work on in protein model training is how to introduce low diversity but critical protein data in training. We saw models do well on diverse data, but what if we want to introduce data from many individual humans, with disease status as meta info for example, that would be very low diversity data. But the diversity that does exists tells us important things about what variation is, and isn't tolerated. We need ways to fine-tune a pre-trained models on high value but low diversity data without reducing the models performance. would you reduce the learnign rate, would you mix in very diverse sequences? Would you freeze parts of the model in place?
+:::
+
 ## Conclusion
 
-This chapter introduced GPCR-BERT, a transformer-based language model for protein sequences. In subsequent chapters, we will explore fine-tuning strategies and downstream applications, such as protein structure prediction. In order to do so we'll have to really unpack the internals of transformer models, the **self-attention mechanism**.
+This chapter introduced GPCR-BERT, a transformer-based language model for protein sequences. In subsequent chapters, we will explore fine-tuning strategies and downstream applications, such as protein structure prediction. In order to do so we'll have to really unpack the internals of transformer models, the **self-attention mechanism**. We'll return to training protein language models in the chapter "putting it all together" in which we putt all lessons together to do one massive training run and training a protein language model that rivals facebook ESM-2 (and cost me ±900\$ out of my own pocket in compute).
