--- a/Chapter1_Proteins.qmd
+++ b/Chapter1_Proteins.qmd
@@ -74,6 +74,10 @@ Protein language models (PLMs) emerged as an alternative. By pretraining on vast
 
 Protein language models are frequently augmented with geometric neural networks or other additional model "adapters" when used for protein structure prediction. These augmentations ensure the 1D sequences, 2D contact maps, and 3D protein shapes that follow adhere to basic geometric rules. A language model or another sequence model isn't inherently aware of 3D space. So while we'll experiment with the latent 2D representations (distances between amino acids) that are implicitly hiding in language models, those representations are noisy and might imply 3D structures that cannot exist (e.g., the distance between a and b, and b and c, might not be consistent with the distance between b and c, etc.). Adding specific neural networks that are designed to produce results that can exist in Euclidean (3D) space greatly improves protein structure prediction. More recent experimentation has linked protein language models directly to diffusion image models to predict protein structure in 3D space with minimal supervision.
 
+### Protein language models as biologically tokenized DNA language models
+
+We previously considered DNA language models at nucleotide level, and discussed in @sec-DNALM how tokenization is a key step in desiging any language model. A protein language model tokenized at amino-acid model is *like* a naturally tokenized DNA language model, at least for human codign sequences within the DNA. Its important to realize that while DNA coding sequences faithfully translated to amino-acid sequences, amino-acids cannot be perfectly translated back to DNA sequences given multiple triplet DNA/RNA codon sequnces (e.g. `GAC` and `GAU`) code for the same amino-acid (in this case `Asp`). That being said, t a later point in this book (Chapter to be writen) we'll consder "multi-modal" models that can represent an imput sequence as DNA, RNA or amino-acids with allowences for the assymetry of the translation. 
+
 ## Step by Step: 1D Sequences to 3D Structures
 
 The process of moving from a linear amino acid sequence to a folded protein structure involves multiple steps, and in the following chapters, we'll trace those steps:
